index page updated to include link to webgl post

--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -109,5 +109,10 @@ layout: default
       <img class='project_img' src='/images/thumbnails/waves.jpg'></img>
       </a>
     </td>
+    <td>
+      <a href='webgl'>
+      <img class='project_img' src='/images/thumbnails/wispa_grid.jpg'></img>
+      </a>
+    </td>
   </tr>
 </tbody></table>
