--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <h1>Hi,</h1>
 
 <p>
-My name is Joe, I'm 16, and this website is home to my projects.
+My name is Joe, I'm 17, and this website is home to my projects.
 </p>
 
 <p>
@@ -21,13 +21,14 @@ If your only here for a quick browse, I thought I'd save you some time by compil
 </p>
 
 <ul>
-<li><a href='/projects/arduino/quadrupod'>quadrupod</a> - a four legged robot that can explore;</li>
+<li><a href='/projects/arduino/quadrupod'>quadrupod</a> - a four legged robot inspired by newts;</li>
 <li><a href='/projects/javascript/blocks'>blocks</a> - a minecraft-like multiplayer game that runs in the browser;</li>
-<li><a href='/projects/javascript/chess'>chess</a> - a chess AI written in JavaScript.</li>
+<li><a href='/projects/javascript/chess'>chess</a> - a chess AI written in JavaScript;</li>
+<li><a href='/club/snake'>snake</a> - a simple LED snake game that we built in <a href='/club'>Arduino Club</a>.
 </ul>
 
 <p>
-Having already processed nearly 5 sentences, I'd like to already thank you for reading my work and I hope you enjoy the posts.
+Having read nearly five sentences now, I'd like to thank you for reading this far and I hope you enjoy the rest of my posts.
 </p>
 
 <hr>
@@ -35,17 +36,17 @@ Having already processed nearly 5 sentences, I'd like to already thank you for r
 <h3>Drop me a comment?</h3>
 
 <p>
-Type what you want in the text area below, click <code>send</code>, and I'll read it!
+Type what you want in the text area below, click <code>send</code>, and I'll read it. There is no sign up required and, although I get hardly any of these, I really enjoy reading them.
 </p>
 
-<textarea id='input' style='width:50%;height:100px;'></textarea>
+<textarea id='input' style='width:50%;height:100px;' placeholder='Send me anything...'></textarea>
 <div>
   <input type='button' id='button' value='send'></input>
   <div id='status' style='color:orange;display:inline-block;'>status: awaiting</div>
 </div>
 
 <p><em>
-Note that this is merely simplex communication. I.e. you can send me messages, but I can't send anything back. Of course, if you were to send an email address or similar, I could get back to you. Source code: <a href='https://github.com/joeiddon/simplex'>HTTPS server</a>.
+Note that this is merely simplex communication. I.e. you can send me messages, but I can't send anything back. If you would like a reply, mention your email address and I will get back to you. Source code: <a href='https://github.com/joeiddon/simplex'>HTTPS server</a>.
 </em></p>
 
 <hr>
@@ -62,11 +63,10 @@ Note that this is merely simplex communication. I.e. you can send me messages, b
 Finally, to increase the cat to non-cat content on the web, here are mine:
 </p>
 
-<img class='half_img' src='/images/cats/wisps.jpg'></img
-><img class='half_img' src='/images/cats/wisps2.jpg'></img>
-
-<img class='half_img' src='/images/cats/kitkat.jpg'></img
-><img class='half_img' src='/images/cats/cats.jpg'></img>
+<img class='quater_img' src='/images/cats/wisps.jpg'></img
+><img class='quater_img' src='/images/cats/wisps2.jpg'></img
+><img class='quater_img' src='/images/cats/kitkat.jpg'></img
+><img class='quater_img' src='/images/cats/cats.jpg'></img>
 
 <script>
 'use strict';
