removed source code link to HTTPS server

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Type what you want in the text area below, click <code>send</code>, and I'll rea
 </div>
 
 <p><em>
-Note that this is merely simplex communication. I.e. you can send me messages, but I can't send anything back. If you would like a reply, mention your email address and I will get back to you. Source code: <a href='https://github.com/joeiddon/simplex'>HTTPS server</a>.
+Note that this is merely simplex communication. I.e. you can send me messages, but I can't send anything back. If you would like a reply, mention your email address and I will get back to you.
 </em></p>
 
 <hr>
