--- a/projects/javascript/blocks.html
+++ b/projects/javascript/blocks.html
@@ -10,7 +10,7 @@ layout: default
 
 <p>This project is my ultimate 3d rendering outcome - a multiplayer minecraft-like game that can be played in the browser.</p>
 
-<p>It all began with being shown how to project some 3d coordinates onto a 2d graph in MS Excel. Then, after learning to use the HTML5 Canvas, how to then render 3d graphics using the core ideas from trigonometry. This progression can be found in <a href='https://github.com/joeiddon/3d_simulation'>my github repo named 3d simulation</a> and I have a separate post on those core ideas <a href='/simulating_3d'>here on this website</a> which includes a mention of my library <a href='https://github.com/joeiddon/zengine'><code>zengine.js</code></a>.</p>
+<p>It all began with being shown how to project some 3d coordinates onto a 2d graph in MS Excel. Then, after learning to use the HTML5 Canvas, how to then render 3d graphics using the core ideas from trigonometry. This progression can be found in <a href='https://github.com/joeiddon/3d_simulation'>my github repo named 3d simulation</a> and I have a separate post on those core ideas <a href='/simulating_threed'>here on this website</a> which includes a mention of my library <a href='https://github.com/joeiddon/zengine'><code>zengine.js</code></a>.</p>
 
 <p>After formulating this reasnobly well-working library, I made some basic games like <a href='https://github.com/joeiddon/apocalombie'>apocalombie</a>, but nothing really all that ambitious. I then came up with this idea.</p>
 
