open cosmos link

--- a/tree.html
+++ b/tree.html
@@ -168,6 +168,7 @@
 	│   └── <a href="./_layouts/default.html">default.html</a><br>
 	├── <a href="./misc/">misc</a><br>
 	│   ├── <a href="./misc/gsearchlinks.html">gsearchlinks.html</a><br>
+	│   ├── <a href="./misc/open_cosmos_social.html">open_cosmos_social.html</a><br>
 	│   └── <a href="./misc/README.md">README.md</a><br>
 	├── <a href="./projects/">projects</a><br>
 	│   ├── <a href="./projects/arduino/">arduino</a><br>
@@ -240,7 +241,7 @@
 	</p>
 	<p>
 
-30 directories, 177 files
+30 directories, 178 files
 	<br><br>
 	</p>
 	<hr>
