--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@ Having read nearly five sentences now, I'd like to thank you for reading this fa
 
 <hr>
 
+<h3>Open Cosmos</h3>
+
+<p>
+I recently developed a demonstration satellite sub-system for the company Open Cosmos. They wrote a <a href='https://open-cosmos.com/sub-systems-for-small-satellites/'>great article</a> on our work together which received extremely kind <a href='misc/open_cosmos_social.html'>social media responses</a>. I am really grateful for the opportunity to have worked with you, and to get to see your facilities such as the clean room and <a href='https://en.wikipedia.org/wiki/Anechoic_chamber'>anechoic chamber</a>.
+</p>
+
+<p>
+I just wanted to follow up on the experience by linking my <a href='https://github.com/joeiddon/ADCS_demo'>GitHub repository</a> and <a href=''>this Google Photos Album</a> which includes a longer length video of the ADCS functioning.
+</p>
+
+<p>
+Thanks again Open Cosmos!
+</p>
+
+<hr>
+
 <h3>Drop me a comment?</h3>
 
 <p>
