reword open cosmos segment and added gphotos link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ I recently developed a demonstration satellite sub-system for the company Open C
 </p>
 
 <p>
-I just wanted to follow up on the experience by linking my <a href='https://github.com/joeiddon/ADCS_demo'>GitHub repository</a> and <a href=''>this Google Photos Album</a> which includes a longer length video of the ADCS functioning.
+I just wanted to follow up on the experience by linking my <a href='https://github.com/joeiddon/ADCS_demo'>GitHub repository</a> and <a href='https://photos.app.goo.gl/isr3sSZi2DETxmJA6'>this Google Photos Album</a> which includes a longer length video of one of the prototypes functioning.
 </p>
 
 <p>
