new post on trigonometry visualiser

--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -115,4 +115,12 @@ layout: default
       </a>
     </td>
   </tr>
+  <tr>
+    <td>
+      <a href='trigonometry'>
+      <img class='project_img' src='/images/thumbnails/trigonometry.png'></img>
+      </a>
+    </td>
+  </tr>
+
 </tbody></table>
