open cosmos took down the article on me, so I've uploaded an archive

--- a/tree.html
+++ b/tree.html
@@ -128,6 +128,7 @@
 	│   │   ├── <a href="./images/thumbnails/slide_robot_arm.jpg">slide_robot_arm.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/snake.jpg">snake.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/terrain.jpg">terrain.jpg</a><br>
+	│   │   ├── <a href="./images/thumbnails/trigonometry.png">trigonometry.png</a><br>
 	│   │   ├── <a href="./images/thumbnails/useless_box.jpg">useless_box.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/violent_robot_arm.jpg">violent_robot_arm.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/waves.jpg">waves.jpg</a><br>
@@ -167,6 +168,31 @@
 	├── <a href="./_layouts/">_layouts</a><br>
 	│   └── <a href="./_layouts/default.html">default.html</a><br>
 	├── <a href="./misc/">misc</a><br>
+	│   ├── <a href="./misc/archive/">archive</a><br>
+	│   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/">Sub-systems for small satellites_ so simple a teen can build them _ Open Cosmos_files</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/all.css">all.css</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/analytics.js">analytics.js</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/common.js">common.js</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/css">css</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/custom.min.js">custom.min.js</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/dashicons.min.css">dashicons.min.css</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/et-divi-customizer-global-15685625159429.min.css">et-divi-customizer-global-15685625159429.min.css</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/ezgif.com-video-to-gif.gif">ezgif.com-video-to-gif.gif</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/Joe-5.jpg">Joe-5.jpg</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/Joe-6-1024x683.jpg">Joe-6-1024x683.jpg</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/joe-photo-set-1-1024x512.jpg">joe-photo-set-1-1024x512.jpg</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/jquery.js">jquery.js</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/jquery.matchHeight.min.js">jquery.matchHeight.min.js</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/jquery-migrate.min.js">jquery-migrate.min.js</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/js">js</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/opencosmos-logo_sml.png">opencosmos-logo_sml.png</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/scripts.js">scripts.js</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/style(1).css">style(1).css</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/style.css">style.css</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/style.min.css">style.min.css</a><br>
+	│   │   │   ├── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/swiper.min.css">swiper.min.css</a><br>
+	│   │   │   └── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos_files/swiper.min.js">swiper.min.js</a><br>
+	│   │   └── <a href="./misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos.html">Sub-systems for small satellites_ so simple a teen can build them _ Open Cosmos.html</a><br>
 	│   ├── <a href="./misc/gsearchlinks.html">gsearchlinks.html</a><br>
 	│   ├── <a href="./misc/open_cosmos_social.html">open_cosmos_social.html</a><br>
 	│   └── <a href="./misc/README.md">README.md</a><br>
@@ -196,6 +222,7 @@
 	│   │   ├── <a href="./projects/javascript/simulating_threed.html">simulating_threed.html</a><br>
 	│   │   ├── <a href="./projects/javascript/snake.html">snake.html</a><br>
 	│   │   ├── <a href="./projects/javascript/terrain.html">terrain.html</a><br>
+	│   │   ├── <a href="./projects/javascript/trigonometry.html">trigonometry.html</a><br>
 	│   │   ├── <a href="./projects/javascript/waves.html">waves.html</a><br>
 	│   │   └── <a href="./projects/javascript/webgl.html">webgl.html</a><br>
 	│   ├── <a href="./projects/other/">other</a><br>
@@ -241,7 +268,7 @@
 	</p>
 	<p>
 
-30 directories, 178 files
+32 directories, 203 files
 	<br><br>
 	</p>
 	<hr>
