--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@ Having read nearly five sentences now, I'd like to thank you for reading this fa
 <h3>Open Cosmos</h3>
 
 <p>
-I recently developed a demonstration satellite sub-system for the company Open Cosmos. They wrote a <a href='https://open-cosmos.com/sub-systems-for-small-satellites/'>great article</a> on our work together which received extremely kind <a href='misc/open_cosmos_social.html'>social media responses</a>. I am really grateful for the opportunity to have worked with you, and to get to see your facilities such as the clean room and <a href='https://en.wikipedia.org/wiki/Anechoic_chamber'>anechoic chamber</a>.
+I recently developed a demonstration satellite sub-system for the company Open
+Cosmos. They wrote a <!--<a
+href='https://open-cosmos.com/sub-systems-for-small-satellites/'>great
+article</a>--> <a
+href='/misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos.html'>great
+article</a> on our work together which received extremely kind <a href='misc/open_cosmos_social.html'>social media responses</a>. I am really grateful for the opportunity to have worked with you, and to get to see your facilities such as the clean room and <a href='https://en.wikipedia.org/wiki/Anechoic_chamber'>anechoic chamber</a>.
 </p>
 
 <p>
