updated open cosmos bit and simplex messaging

--- a/index.html
+++ b/index.html
@@ -33,41 +33,54 @@ Having read nearly five sentences now, I'd like to thank you for reading this fa
 
 <hr>
 
-<h3>Open Cosmos</h3>
+<h3>Thank You Open Cosmos</h3>
 
 <p>
-I recently developed a demonstration satellite sub-system for the company Open
-Cosmos. They wrote a <!--<a
-href='https://open-cosmos.com/sub-systems-for-small-satellites/'>great
+I recently developed a demonstration satellite sub-system for <a
+href='https://www.open-cosmos.com/'>Open
+Cosmos</a>. I have written a technical description of the project on <a
+href='https://github.com/joeiddon/ADCS_demo'>GitHub</a>, so if you are
+interested in the project, take a look at that. There are some pictures in <a
+href='https://photos.app.goo.gl/isr3sSZi2DETxmJA6'>this Google Photos album</a>
+which tell a little bit of the story of making it.
+</p>
+
+<p>
+Open Cosmos wrote an <!--<a
+href='https://open-cosmos.com/sub-systems-for-small-satellites/'>
 article</a>--> <a
-href='/misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos.html'>great
-article</a> on our work together which received extremely kind <a href='misc/open_cosmos_social.html'>social media responses</a>. I am really grateful for the opportunity to have worked with you, and to get to see your facilities such as the clean room and <a href='https://en.wikipedia.org/wiki/Anechoic_chamber'>anechoic chamber</a>.
-</p>
-
-<p>
-I just wanted to follow up on the experience by linking my <a href='https://github.com/joeiddon/ADCS_demo'>GitHub repository</a> and <a href='https://photos.app.goo.gl/isr3sSZi2DETxmJA6'>this Google Photos Album</a> which includes a longer length video of one of the prototypes functioning.
-</p>
-
-<p>
-Thanks again Open Cosmos!
+href='/misc/archive/Sub-systems%20for%20small%20satellites_%20so%20simple%20a%20teen%20can%20build%20them%20_%20Open%20Cosmos.html'>
+article</a>(the post was lost to the web when they rebranded their website, so
+this is a link to an archive of the original blog post) on my work. The article
+ties the low cost project with their company's message of low cost and
+ease-of-access to space endeavours.
 </p>
 
 <hr>
 
-<h3>Drop me a comment?</h3>
+<h3>Send me an anonymous message?</h3>
+
+<p>Often when reading other people's work, it is hard to contact the author
+without signing up for some kind of account. Due to my limited traffic on this
+site, I encourage all the comments I get. Don't worry: these aren't displayed,
+only I can read them, and you do not need to create an account or provide an
+email to leave one.</p>
 
 <p>
-Type what you want in the text area below, click <code>send</code>, and I'll read it. There is no sign up required and, although I get hardly any of these, I really enjoy reading them.
+So if you have anything to say to me simply type it in the text box below, click <code>send</code>, and I'll read it.
 </p>
 
-<textarea id='input' style='width:50%;height:100px;' placeholder='Send me anything...'></textarea>
+<textarea id='input'
+style='width:50%;height:100px;magin:0.5em 0 0.5em 0;'
+placeholder='Send me anything...'></textarea>
 <div>
   <input type='button' id='button' value='send'></input>
   <div id='status' style='color:orange;display:inline-block;'>status: awaiting</div>
 </div>
 
 <p><em>
-Note that this is merely simplex communication. I.e. you can send me messages, but I can't send anything back. If you would like a reply, mention your email address and I will get back to you.
+Note that if you would like a reply, mention your email address in the message
+and I can contact you via that.
 </em></p>
 
 <hr>
