project image css changes

--- a/index.html
+++ b/index.html
@@ -14,22 +14,19 @@ Use the tabs at the top to navigate around. The <a href='/about'>about</a> secti
 
 <hr>
 
-<h3>My Favourite Projects</h3>
+<h3>Favourite Projects</h3>
 
 <p>
-If your only here for a quick browse, I thought I'd save you some time by compiling my top few projects. They are:
+If only here for a quick browse, I thought I'd save you some time by compiling my top few projects.
 </p>
 
 <ul>
 <li><a href='/projects/arduino/quadrupod'>quadrupod</a> - a four legged robot inspired by newts;</li>
 <li><a href='/projects/javascript/blocks'>blocks</a> - a minecraft-like multiplayer game that runs in the browser;</li>
+<li><a href='/projects/arduino/violent_robot_arm'>robot</a> - a robot arm to set up the chess board;</li>
 <li><a href='/projects/javascript/chess'>chess</a> - a chess AI written in JavaScript;</li>
 <li><a href='/club/snake'>snake</a> - a simple LED snake game that we built in <a href='/club'>Arduino Club</a>.
 </ul>
-
-<p>
-Having read nearly five sentences now, I'd like to thank you for reading this far and I hope you enjoy the rest of my posts.
-</p>
 
 <hr>
 
