--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -6,7 +6,7 @@ layout: default
 
 <h1>Arduino Projects</h1>
 
-<p>These are my arduino-based projects. Feel free to explore any of them below.</p>
+<p>These are my <a href='https://www.arduino.cc/'>Arduino</a>-based projects. Feel free to explore any of them below.</p>
 
 
 <table><tbody>
@@ -14,12 +14,20 @@ layout: default
     <td>
       <a href='slide_robot_arm'>
       <img class='project_img' src='/images/thumbnails/slide_robot_arm.jpg'></img>
+      <div>
+        <span>Slide Robot Arm</span>
+        <span>05/02/17</span>
+      </div>
       </a>
     </td>
     <td>
       <a href='violent_robot_arm'>
       <img class='project_img' src='/images/thumbnails/violent_robot_arm.jpg'></img>
       </a>
+      <div>
+        <span>Very Violent Robot Arm</span>
+        <span>30/07/17</span>
+      </div>
     </td>
   </tr>
   <tr>
@@ -27,11 +35,19 @@ layout: default
       <a href='quadrupod'>
       <img class='project_img' src='/images/thumbnails/quadrupod.png'></img>
       </a>
+      <div>
+        <span>Quadrupod</span>
+        <span>26/03/17</span>
+      </div>
     </td>
     <td>
       <a href='balancing_robot'>
       <img class='project_img' src='/images/thumbnails/balancing_robot.jpg'></img>
       </a>
+      <div>
+        <span>Balancing Robot</span>
+        <span>31/12/17</span>
+      </div>
     </td>
   </tr>
   <tr>
@@ -39,11 +55,30 @@ layout: default
       <a href='laser'>
       <img class='project_img' src='/images/thumbnails/laser.jpg'></img>
       </a>
+      <div>
+        <span>LASER+LDR</span>
+        <span>16/02/18</span>
+      </div>
     </td>
      <td>
       <a href='bitcoin'>
       <img class='project_img' src='/images/thumbnails/bitcoin.jpg'></img>
+      <div>
+        <span>WiFi Bitcoin Price</span>
+        <span>27/01/18</span>
+      </div>
       </a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <a href='bipedal'>
+      <img class='project_img' src='/images/thumbnails/laser.jpg'></img>
+      </a>
+      <div>
+        <span>Bipedal Robot</span>
+        <span>21/02/20</span>
+      </div>
     </td>
   </tr>
 <tbody></table>
