added dates for js posts using first git records of that post

--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -15,11 +15,19 @@ layout: default
     <td>
       <a href='balls'>
       <img class='project_img' src='/images/thumbnails/balls.png'></img>
+      <div>
+        <span>Balls Simulator</span>
+        <span>27/07/17</span>
+      </div>
       </a>
     </td>
     <td>
       <a href='gravity'>
       <img class='project_img' src='/images/thumbnails/gravity.jpg'></img>
+      <div>
+        <span>Gravity Simulator</span>
+        <span>25/08/17</span>
+      </div>
       </a>
     </td>
   </tr>
@@ -27,11 +35,19 @@ layout: default
     <td>
       <a href='chess'>
       <img class='project_img' src='/images/thumbnails/chess.jpg'></img>
+      <div>
+        <span>Chess AI</span>
+        <span>25/08/17</span>
+      </div>
       </a>
     </td>
     <td>
       <a href='maze_generation'>
       <img class='project_img' src='/images/thumbnails/maze_generation.jpg'></img>
+      <div>
+        <span>Maze Generation</span>
+        <span>04/09/17</span>
+      </div>
       </a>
     </td>
   </tr>
@@ -39,11 +55,19 @@ layout: default
     <td>
       <a href='simulating_threed'>
       <img class='project_img' src='/images/thumbnails/simulating_threed.jpg'></img>
+      <div>
+        <span>Story of Learning 3D Simulation</span>
+        <span>11/09/17</span>
+      </div>
       </a>
     </td>
     <td>
       <a href='blocks'>
       <img class='project_img' src='/images/thumbnails/blocks.jpg'></img>
+      <div>
+        <span>Blocks</span>
+        <span>09/01/19</span>
+      </div>
       </a>
     </td>
   </tr>
@@ -51,11 +75,19 @@ layout: default
     <td>
       <a href='maze_game'>
       <img class='project_img' src='/images/thumbnails/maze_game.jpg'></img>
+      <div>
+        <span>3D Maze Game</span>
+        <span>25/08/17</span>
+      </div>
       </a>
     </td>
     <td>
       <a href='terrain'>
       <img class='project_img' src='/images/thumbnails/terrain.jpg'></img>
+      <div>
+        <span>Terrain Simulator</span>
+        <span>29/01/18</span>
+      </div>
       </a>
     </td>
   </tr>
@@ -63,12 +95,20 @@ layout: default
     <td>
       <a href='sierpinski'>
       <img class='project_img' src='/images/thumbnails/sierpinski.jpg'></img>
+      <div>
+        <span>Sierpinski Curves</span>
+        <span>28/08/17</span>
+      </div>
       </a>
     </td>
 
     <td>
       <a href='perlin'>
       <img class='project_img' src='/images/thumbnails/perlin.jpg'></img>
+      <div>
+        <span>Perlin Noise</span>
+        <span>16/09/17</span>
+      </div>
       </a>
     </td>
   </tr>
@@ -76,11 +116,19 @@ layout: default
     <td>
       <a href='snake'>
       <img class='project_img' src='/images/thumbnails/snake.jpg'></img>
+      <div>
+        <span>Snake Game</span>
+        <span>06/10/17</span>
+      </div>
       </a>
     </td>
     <td>
       <a href='paint'>
       <img class='project_img' src='/images/thumbnails/floodfill.png'></img>
+      <div>
+        <span>Paint + Floodfill Algorithm</span>
+        <span>18/11/17</span>
+      </div>
       </a>
     </td>
   </tr>
@@ -88,37 +136,59 @@ layout: default
     <td>
       <a href='game_of_life'>
       <img class='project_img' src='/images/thumbnails/game_of_life.png'></img>
+      <div>
+        <span>Game Of Life</span>
+        <span>21/12/17</span>
+      </div>
       </a>
     </td>
     <td>
       <a href='ball'>
       <img class='project_img' src='/images/thumbnails/ball.png'></img>
+      <div>
+        <span>Interactive Ball</span>
+        <span>28/02/18</span>
+      </div>
       </a>
     </td>
   </tr>
   <tr>
-    <!--
     <td>
       <a href='chase'>
       <img class='project_img' src='/images/thumbnails/chase.jpg'></img>
+      <div>
+        <span>A Simple 3D Game</span>
+        <span>25/08/17</span>
+      </div>
       </a>
     </td>
-    -->
     <td>
       <a href='waves'>
       <img class='project_img' src='/images/thumbnails/waves.jpg'></img>
-      </a>
-    </td>
-    <td>
-      <a href='webgl'>
-      <img class='project_img' src='/images/thumbnails/wispa_grid.jpg'></img>
+      <div>
+        <span>Classical Waves</span>
+        <span>24/01/19</span>
+      </div>
       </a>
     </td>
   </tr>
   <tr>
     <td>
+      <a href='webgl'>
+      <img class='project_img' src='/images/thumbnails/wispa_grid.jpg'></img>
+      <div>
+        <span>Learning 3D in WebGL</span>
+        <span>05/08/19</span>
+      </div>
+      </a>
+    </td>
+    <td>
       <a href='trigonometry'>
       <img class='project_img' src='/images/thumbnails/trigonometry.png'></img>
+      <div>
+        <span>Trigonometry Visualisation Tool</span>
+        <span>30/03/20</span>
+      </div>
       </a>
     </td>
   </tr>
