--- a/projects/other/index.html
+++ b/projects/other/index.html
@@ -19,11 +19,19 @@ As with the other pages, click the thumbnails to see what they're about.
     <td>
       <a href='useless_box'>
       <img class='project_img' src='/images/thumbnails/useless_box.jpg'></img>
+      <div>
+        <span>Useless Box</span>
+        <span>20/09/18</span>
+      </div>
       </a>
     </td>
     <td>
       <a href='coilgun'>
       <img class='project_img' src='/images/thumbnails/coilgun.jpg'></img>
+      <div>
+        <span>Coilgun</span>
+        <span>02/06/19</span>
+      </div>
       </a>
     </td>
   </tr>
