added dates for club posts

--- a/club/index.html
+++ b/club/index.html
@@ -27,11 +27,19 @@ All the code we have written is available <a href='https://github.com/joeiddon/a
     <td>
       <a href='snake'>
       <img class='project_img' src='/images/club/thumbnails/snake.jpg'></img>
+      <div>
+        <span>LED Snake</span>
+        <span>17/01/18</span>
+      </div>
       </a>
     </td>
     <td>
       <a href='hexapod'>
       <img class='project_img' src='/images/club/thumbnails/hexapod.png'></img>
+      <div>
+        <span>Hexapod</span>
+        <span>03/02/18</span>
+      </div>
       </a>
     </td>
   </tr>
@@ -39,6 +47,10 @@ All the code we have written is available <a href='https://github.com/joeiddon/a
     <td>
       <a href='cars'>
       <img class='project_img' src='/images/club/thumbnails/cars.jpg'></img>
+      <div>
+        <span>RC Cars</span>
+        <span>03/10/18</span>
+      </div>
       </a>
     </td>
   </tr>
