--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -6,7 +6,7 @@ layout: default
 
 <h1>Javascript Projects</h1>
 
-<p>These are my projects that are coded in Javascript. Feel free to explore any of them below.</p>
+<p>These are my projects that are written in Javascript. Feel free to explore any of them below.</p>
 
 <p>I'd just like to point out that <strong>none of these projects use any external libraries or frameworks; everything is coded from <em>complete scratch</em> </strong> which is something I am quite proud of.</p>
 
