--- a/about.html
+++ b/about.html
@@ -14,7 +14,10 @@ I dabble in some <code>JavaScript</code>, <code>Python</code> and some <code>C++
 <p>In my spare time, you will find me over on <code>stackoverflow.com</code>. I have built up <a href='https://stackoverflow.com/u/7434365'>a reasonable standing there</a> (<code>10,000</code> reputation, and about <code>700</code> posts) and my claim to fame is that one week I had gained the second most reputation out of the nine million users, surpassing Jon Skeet, however I must admit that I spent nearly that entire week on the site - hitting the <code>200</code> rep cap (excluding accepts) every day and that is way above my usual commitment. The majority of questions I answer there are Python-based as these are commonly asked and I enjoy helping out new coders who often pick this language to get into programming.
 </p>
 
-<a href='https://stackoverflow.com/u/7434365'><img style='width: 208px; height: 58px;' src='https://stackoverflow.com/users/flair/7434365.png?theme=dark'></img></a>
+<a href='https://stackoverflow.com/u/7434365'><img style='width: 208px; height:
+58px;' src='https://stackoverflow.com/users/flair/7434365.png?theme=light'></img></a>
+<a href='https://physics.stackexchange.com/u/231032'><img style='width: 208px; height:
+58px;' src='https://physics.stackexchange.com/users/flair/231032.png'></img></a>
 <img style='width: 208px; height: 58px;' src='https://projecteuler.net/profile/Eulers_Cat_Walker.png'></img>
 
 <h2>The Website</h2>
